--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-python_version >= "3.9"
-streamlit==1.22.0
-folium==0.14.0
-streamlit-folium==0.11.1
-pandas==1.5.3
-numpy==1.24.3
-plotly==5.14.1
-pydeck==0.8.0
-scipy==1.10.1
+streamlit
+folium
+streamlit-folium
+pandas
+numpy
+plotly
+pydeck
+scipy
